03_liskov_substitution_principle/src/com/talevski/viktor/example/good/Car.java
package com.talevski.viktor.example.good;

public class Car extends TransportationDeviceWithEngine {
}
