03_liskov_substitution_principle/src/com/talevski/viktor/example/bad/Car.java
package com.talevski.viktor.example.bad;

public class Car extends TransportationDevice {
}
